k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkjava-deployment
  labels:
    app: sparkjava
  namespace: sparkjava
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sparkjava
  template:
    metadata:
      labels:
        app: sparkjava
    spec:
      containers:
      - name: sparkjava
        image: 861531569385.dkr.ecr.eu-west-2.amazonaws.com/sparkjava
        ports:
        - containerPort: 8080
