k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name:  sparkjava-svc
  namespace: sparkjava
spec:
  selector:
    app:  sparkjava
